# TSV_nmAI

./: .gitignore  CMakeLists.txt  README copy.md  README.md  ai_bot.cpp  bao_ve_thuat_toan.md  bridge_main.cpp  bullet.cpp  diff_main.txt  game.cpp  item.cpp  main.cpp  map.cpp  portal.cpp  renderer.cpp  run_rl_vs_bot.bat  run_rl_vs_bot.sh  tank.cpp  ui.cpp
Astar/: README.md  astar_bot.cpp  astar_bot.h  bridge_main.cpp
Astar/pathfind-isolated/: benchmark_results.csv  compile_results.py  generate_maps.py  pathfind_benchmark.py
Astar/pathfind-isolated/reports/: full_report.txt  summary.csv
Astar/python/: maze_generator.py  pathfind_analyzer.py  pathfind_controller.py  pathfind_env.py  pathfind_planner.py
NEAT/: neat_bot.cpp  neat_bot.h
NEAT/core/: Genome.h  Innovation.h  Species.h
NEAT/train/: Curriculum.h  Fitness.h  Observation.h  RuleEnemy.h  train.cpp
docs/: IT3160_BaoCao_Project.md  architecture_overview.md  baocao_beamer.tex  baocao_btl.tex  slide_bao_cao_idea.md
include/: AZRandom.h  Constants.h  bullet.h  constants.h  game.h  item.h  map.h  portal.h  renderer.h  tank.h  ui.h
neat/: Genome.h  Network.h  Population.h
python/: maze_generator.py  pathfind_analyzer.py  pathfind_controller.py  pathfind_env.py  pathfind_shell.py
reinforcement learning/: README.md  ai_bot.cpp  ai_bot.h  bot.cpp  bot.h  bot.py  gymnasium_wrapper.py  rl_env_wrapper.cpp  train_ai.py
train/: Fitness.h  RuleEnemy.h  train.cpp
train_AI/: export_model.py  gymnasium_wrapper.py
